update ul to li

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
     </main>    
     <footer>
         <nav>
-            <ul><a href="https://www.instagram.com/about/us/">about us</a></ul>
-            <ul><a href="https://help.instagram.com/">support</a></ul>
-            <ul><a href="http://blog.instagram.com/">blog</a></ul>
-            <ul><a href="https://instagram-press.com/">press</a></ul>
-            <ul><a href="https://www.instagram.com/developer/">api</a></ul>
-            <ul><a href="https://www.instagram.com/about/jobs/">jobs</a></ul>
-            <ul><a href="https://help.instagram.com/155833707900388">privacy</a></ul>
-            <ul><a href="https://help.instagram.com/478745558852511">terms</a></ul>
-            <ul><a href="https://www.instagram.com/explore/locations/">directory</a></ul>
-            <ul><a href="#">language</a></ul>
+            <ul>
+                <li><a href="https://www.instagram.com/about/us/">about us</a></li>
+                <li><a href="https://help.instagram.com/">support</a></li>
+                <li><a href="http://blog.instagram.com/">blog</a></li>
+                <li><a href="https://instagram-press.com/">press</a></li>
+                <li><a href="https://www.instagram.com/developer/">api</a></li>
+                <li><a href="https://www.instagram.com/about/jobs/">jobs</a></li>
+                <li><a href="https://help.instagram.com/155833707900388">privacy</a></li>
+                <li><a href="https://help.instagram.com/478745558852511">terms</a></lil>
+                <li><a href="https://www.instagram.com/explore/locations/">directory</a></li>
+                <li><a href="#">language</a></li>
+            </ul>
         </nav>
     </footer>
 </body>
