--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#">language</a></li>
             </ul>
         </nav>
+        <span>ç 2018 ekcodecamp</span>
     </footer>
 </body>
 </html>
