--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
 <body>
     <main>
         <!-- phone images -->
-        <div></div>
+        <div>
+            <img src="images/phoneImage.png" />
+        </div>
         <!-- login details -->
         <div></div>
     </main>    
     <footer>
         <nav>
             <ul>
-                <li><a href="https://www.instagram.com/about/us/">about us</a></li>
-                <li><a href="https://help.instagram.com/">support</a></li>
-                <li><a href="http://blog.instagram.com/">blog</a></li>
-                <li><a href="https://instagram-press.com/">press</a></li>
-                <li><a href="https://www.instagram.com/developer/">api</a></li>
-                <li><a href="https://www.instagram.com/about/jobs/">jobs</a></li>
-                <li><a href="https://help.instagram.com/155833707900388">privacy</a></li>
-                <li><a href="https://help.instagram.com/478745558852511">terms</a></lil>
-                <li><a href="https://www.instagram.com/explore/locations/">directory</a></li>
-                <li><a href="#">language</a></li>
+                <li><a href="">about us</a></li>
+                <li><a href="">support</a></li>
+                <li><a href="">blog</a></li>
+                <li><a href="">press</a></li>
+                <li><a href="">api</a></li>
+                <li><a href="">jobs</a></li>
+                <li><a href="">privacy</a></li>
+                <li><a href="">terms</a></li>
+                <li><a href="">directory</a></li>
+                <span>2018 EKcodecamp</span>
             </ul>
         </nav>
-        <span>© 2018 ekcodecamp</span>
     </footer>
 </body>
 </html>
