--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="">privacy</a></li>
                 <li><a href="">terms</a></li>
                 <li><a href="">directory</a></li>
-                <span>2018 EKcodecamp</span>
+                <span>©2018 EKcodecamp</span>
             </ul>
         </nav>
     </footer>
