--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <div>
             <img src="images/phoneImage.png" />
         </div>
+            <div>
+                <span>Have an account? <a href="#">Log in</a></span>
+                <span>Get the app.</span>
+            </div>
+            <div>
+                <img src="images/ios.png" />
+                <img src="images/android.png" />
+            </div>
         <!-- login details -->
         <div></div>
     </main>    
