--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
         <div>
             <img src="images/phoneImage.png" />
         </div>
-            <div>
-                <span>Have an account? <a href="#">Log in</a></span>
-                <span>Get the app.</span>
-            </div>
-            <div>
-                <img src="images/ios.png" />
-                <img src="images/android.png" />
-            </div>
+        <span>
+            Have an account? <a href="#">Log in</a>
+        </span>
+        <div>
+            Get the app.
+        </div>
+        <div>
+            <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8"><img src="images/ios.png"</a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge"><img src="images/android.png"</a>
+        </div>
         <!-- login details -->
         <div></div>
     </main>    
