--- a/index.html
+++ b/index.html
@@ -9,21 +9,38 @@
 <body>
     <main>
         <!-- phone images -->
+            <div>
+                <img src="images/phoneImage.png" />
+            </div>
+            <!-- box 1 -->
+            <div>
+                <div>
+                    <img src = "images/logo.png" />
+                </div>
+                <Form action="feed.html">
+                    <input name="username" type="text" placeholder ="phone number, username, or email" required>
+                    <input name="password" type="password" placeholder ="password" required>
+                    <input name="submit" type="submit" value="Log in">    
+                </Form>
+                <span>or</span>
+                <div>
+                    <a href="https://www.facebook.com/login.php?skip_api_login=1&api_key=124024574287414&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fv1.0%2Fdialog%2Foauth%3Fredirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignup%252F%26state%3D%257B%2522fbLoginKey%2522%253A%2522fi2zjuz239k297vpq9e2xke14wk5mp1mky56lfaoxiox3hbns%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252F%2522%257D%26scope%3Demail%26response_type%3Dcode%252Cgranted_scopes%26client_id%3D124024574287414%26ret%3Dlogin%26logger_id%3Df48e3346-69fb-8a0d-94f0-f992848af084&cancel_url=https%3A%2F%2Fwww.instagram.com%2Faccounts%2Fsignup%2F%3Ferror%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3D%257B%2522fbLoginKey%2522%253A%2522fi2zjuz239k297vpq9e2xke14wk5mp1mky56lfaoxiox3hbns%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252F%2522%257D%23_%3D_&display=page&locale=en_GB&logger_id=f48e3346-69fb-8a0d-94f0-f992848af084" > Log in with facebook</a>
+                    <a href=" "> Forgot password?</a>
+                </div>
+            </div>
+          <!-- box 2 -->
         <div>
-            <img src="images/phoneImage.png" />
+            <span>Have an account? <a href="#">Log in</a></span>
+        </div> 
+        
+         <!-- box 3 -->
+         <div>
+            <div> 
+                <span>Get the app.</span>
+            </div>   
+                <a target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8"><img src="images/ios.png"</a>
+                <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge"><img src="images/android.png"</a>
         </div>
-        <span>
-            Have an account? <a href="#">Log in</a>
-        </span>
-        <div>
-            Get the app.
-        </div>
-        <div>
-            <a href="https://itunes.apple.com/app/instagram/id389801252?mt=8"><img src="images/ios.png"</a>
-            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge"><img src="images/android.png"</a>
-        </div>
-        <!-- login details -->
-        <div></div>
     </main>    
     <footer>
         <nav>
