--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Feed | EKcodecamp </title>
+    <title>Profile | EKcodecamp </title>
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
         
     </header>    
     <main>
-        feed
+        profile
     </main>
     <footer>
         <nav>
