update class in body main index

--- a/explore.html
+++ b/explore.html
@@ -8,7 +8,9 @@
         </head>
         <body>
             <header class="header">
-                <a href="feed.html"><img src="images/instaimg.png" /></a>
+                <a href="feed.html">
+                    <img src="images/instaimg.png" />
+                </a>
                 <form class="header__form">
                     <input type="search" placeholder ="search" class="header__input-search" />
                 </form>
