--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +8,67 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Profile | EKcodecamp </title>
 </head>
+
 <body>
     <header class="header">
-        <a href="feed.html"><img src="images/instaimg.png" /></a>
+        <a href="feed.html">
+            <img src="images/instaimg.png" />
+        </a>
         <form class="header__form">
-            <input type="search" placeholder ="search" class="header__input-search" />
+            <input type="search" placeholder="search" class="header__input-search" />
         </form>
         <ul class="header__list">
-            <li class="header__list-icon"><a href="explore.html" class="header_list-icon-link"> <i class="fa fa-compass" aria-hidden="true"></i> </li>
-            <li class="header__list-icon"><a href="#" class="header_list-icon-link"> <i class="fa fa-heart-o" aria-hidden="true"></i></li>
-            <li class="header__list-icon"><a href="profile.html" class="header_list-icon-link"> <i class="fa fa-user-o" aria-hidden="true"></i> </li>
+            <li class="header__list-icon">
+                <a href="explore.html" class="header_list-icon-link">
+                    <i class="fa fa-compass" aria-hidden="true"></i>
+            </li>
+            <li class="header__list-icon">
+                <a href="#" class="header_list-icon-link">
+                    <i class="fa fa-heart-o" aria-hidden="true"></i>
+            </li>
+            <li class="header__list-icon">
+                <a href="profile.html" class="header_list-icon-link">
+                    <i class="fa fa-user-o" aria-hidden="true"></i>
+            </li>
         </ul>
-                
+
     </header>
     <span>profile</span>
-    
+
     <footer class="footer">
-            <nav class="footer__nav">
-                <ul class="footer__list">
-                    <li class ="footer__list-item"><a href="">about us</a></li>
-                    <li class ="footer__list-item"><a href="">support</a></li>
-                    <li class ="footer__list-item"><a href="">blog</a></li>
-                    <li class ="footer__list-item"><a href="">press</a></li>
-                    <li class ="footer__list-item"><a href="">api</a></li>
-                    <li class ="footer__list-item"><a href="">jobs</a></li>
-                    <li class ="footer__list-item"><a href="">privacy</a></li>
-                    <li class ="footer__list-item"><a href="">terms</a></li>
-                    <li class ="footer__list-item"><a href="">directory</a></li>
-                </ul>
-            </nav>
-            <span class="footer__copyright">©2018 EKcodecamp</span>
-        </footer>
+        <nav class="footer__nav">
+            <ul class="footer__list">
+                <li class="footer__list-item">
+                    <a href="">about us</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">support</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">blog</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">press</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">api</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">jobs</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">privacy</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">terms</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="">directory</a>
+                </li>
+            </ul>
+        </nav>
+        <span class="footer__copyright">©2018 EKcodecamp</span>
+    </footer>
 </body>
+
 </html>
