--- a/index.html
+++ b/index.html
@@ -11,51 +11,44 @@
 </head>
 
 <body>
+    <!-- This are the COLUMNS -->
     <main class="login">
-        <!-- phone images -->
+        <!-- Phone image -->
         <div class="login__column">
             <img src="images/phoneImage.png" />
         </div>
-
-        <!-- right col box 1 -->
+        <!-- Boxes  -->
         <div class="login__column">
-            <div class="login__whitebox">
+            <div class="login__white-box">
                 <img src="images/logo.png" class="login__logo" />
+                <form action="feed.html" method="get" class="login__form">
+                    <input class="login__input" name="username" type="text" accept="" placeholder="Username" required />
+                    <input class="login__input" name="password" type="password" placeholder="Password" required />
+                    <input class="login__input login__button" type="submit" value="Log In" />
+                </form>
+                <span>or</span>
+                <a href="#" class="login__link">
+                    <i class="fa fa-facebook-square" aria-hidden="true"></i> Log in with Facebook</a>
+                <a href="#" class="login__link login__small-link">Forgot password?</a>
             </div>
-
-            <Form action="feed.html" method="post" class="login__form">
-                <input class="login__input" name="username" type="text" placeholder="phone number, username, or email" required />
-                <input class="login__input" name="password" type="password" placeholder="password" required />
-                <input class="login__input login__input-button" name="submit" type="submit" value="Log in" />
-            </Form>
-
-            <span>or</span>
-
-            <a href="#" class="login__link">
-                <i class="fa fa-facebook-square" aria-hidden="true"></i> Log in with facebook</a>
-            <a href="#" class="login__link login__small-link"> Forgot password?</a>
-        </div>
-
-        <!-- right col box 2 -->
-        <div class="login__whitebox">
-            <span>Don't Have an account?
+            <div class="login__white-box">
+                <span>Don't have an account?</span>
                 <a href="#">Sign up</a>
-            </span>
+            </div>
+            <div class="login__box">
+                <span>Get the app.</span>
+                <div class="login__app-stores">
+                    <a class="login__app-store" target="_blank " href="https://itunes.apple.com/app/instagram/id389801252 ">
+                        <img src="images/ios.png ">
+                    </a>
+                    <a class="login__app-store" target="_blank " href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26utm_medium%3Dbadge ">
+                        <img src="images/android.png ">
+                    </a>
+                </div>
+            </div>
         </div>
-
-        <!-- right col box 3 -->
-        <div class="login__box">
-            <span>Get the app.</span>
-        </div class="login__appstores">
-        <a class="login__appstore" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
-            <img src="images/ios.png" </a>
-            <a class="login__appstore" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
-                <img src="images/android.png" </a>
-                </div>
-                </div>
-                </div>
     </main>
-
+    <!-- Footer -->
     <footer class="footer">
         <nav class="footer__nav">
             <ul class="footer__list">
