feed page css update

--- a/explore.html
+++ b/explore.html
@@ -39,35 +39,33 @@
     </header>
 
     <main class="explore">
-        <span class="explore__suggested">suggested</span>
-        <ul class="explore__userlists">
-            <li class="explore__userlist">
-                <div class="explore__col">
-                    <img src="images/userlist-avatar.jpg" class="explore__userlist-avatar" />
-                    <div class="explore__userlist-info">
-                        <span class="explore__userlist-id">ted</span>
-                        <span class="explore__userlist-description">TedTalks</span>
+        <ul class="explore__user-list">
+            <li class="explore__user">
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
                     </div>
                 </div>
-                <div class="explore__col">
-                    <button class="explore__userlist-right-follow">Follow</button>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
                 </div>
             </li>
-            <li class="explore__userlist">
-                <div class="explore__col">
-                    <img src="images/userlist-avatar.jpg" class="explore__userlist-avatar" />
-                    <div class="explore__userlist-info">
-                        <span class="explore__userlist-id">ted</span>
-                        <span class="explore__userlist-description">TedTalks</span>
+            <li class="explore__user">
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
                     </div>
                 </div>
-                <div class="explore__col">
-                    <button class="explore__userlist-right-follow">Follow</button>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
                 </div>
             </li>
         </ul>
     </main>
-
     <footer class="footer">
         <nav class="footer__nav">
             <ul class="footer__list">
