--- a/feed.html
+++ b/feed.html
@@ -45,8 +45,10 @@
             <article class="photo">
                 <header class="photo__header">
                     <img src="images/avatar.jpg" class="photo__avatar" />
-                    <span class="photo__username">meatseagree</span>
-                    <span calss="photo__place">Chiangmai</span>
+                    <div class="photo__header-info">
+                        <span class="photo__username">meatseagree</span>
+                        <span class="photo__place">Chiangmai</span>
+                    </div>
                 </header>
                 <img src="images/feedphoto.jpg" class="photo__file" />
                 <div class="photo__feedback">
@@ -59,19 +61,21 @@
                             <i class="fa fa-bookmark-o fa-lg"></i>
                         </div>
                     </div>
-                    <span class="photo__likes">51 likes</span>
-                    <ul class="photo__comments">
-                        <li class="photo__comment">
-                            <span class="photo__comment-author">
-                                EKK
-                            </span>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </li>
-                    </ul>
-                    <span class="photo__timestamp">12 hours ago</span>
-                    <div class="photo__make-comment">
-                        <textarea placeholder="Add a comment.."></textarea>
-                        <i class="fa fa-ellipsis-h "></i>
+                    <div class="photo__bottom">
+                        <span class="photo__likes">51 likes</span>
+                        <ul class="photo__comments">
+                            <li class="photo__comment">
+                                <span class="photo__comment-author">
+                                    EKK
+                                </span>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </li>
+                        </ul>
+                        <span class="photo__timestamp">12 hours ago</span>
+                        <div class="photo__make-comment">
+                            <textarea placeholder="Add a comment.."></textarea>
+                            <i class="fa fa-ellipsis-h "></i>
+                        </div>
                     </div>
                 </div>
             </article>
